# BurstLinker

./: CMakeLists.txt  README.md
android/: build.gradle
android/lib/: CMakeLists.txt  build.gradle
android/lib/src/main/cpp/: BayerDithererWithRs.cpp  BurstLinker.cpp  NoDithererWithRs.cpp
android/lib/src/main/java/com/bilibili/burstlinker/: BurstLinker.java
android/sample/: build.gradle
android/sample/src/main/java/com/bilibili/burstlinker/sample/: MainActivity.java
example/: Main.cpp
src/: BayerDitherer.cpp  BurstLinker.cpp  ColorQuantizer.cpp  Ditherer.cpp  GifAnalyzer.cpp  GifEncoder.cpp  GifLogger.cpp  GifLogger.h  KMeansQuantizer.cpp  Logger.cpp  Logger.h  M2Ditherer.cpp  Main.cpp  MedianCutQuantizer.cpp  NeuQuant.cpp  NeuQuant.h  OctreeQuantizer.cpp  OctreeQuantizer.h
